[gd_scene load_steps=12 format=3 uid="uid://bm4dch6mockx5"]

[ext_resource type="ArrayMesh" uid="uid://gqimd7q31t2y" path="res://modeles3d/knife.obj" id="1_4ip2a"]
[ext_resource type="Script" path="res://scenes/item/knife.gd" id="1_mkcan"]
[ext_resource type="Texture2D" uid="uid://boyf1y87wrttw" path="res://images/textures/Rust004_1K-JPG_Metalness (1).png" id="2_34djc"]
[ext_resource type="Texture2D" uid="uid://bpvvx4mqxypvl" path="res://images/textures/boisplain 2.png" id="3_a6n34"]
[ext_resource type="AudioStream" uid="uid://c2rhfg7ot4fdq" path="res://sons/WEAPSwrd_Epee (ID 0129)_LS.wav" id="5_uu6mv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kblde"]
albedo_texture = ExtResource("2_34djc")
metallic = 0.75
roughness = 0.75
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jdtmk"]
albedo_texture = ExtResource("2_34djc")
metallic = 0.75
roughness = 0.75
uv1_scale = Vector3(0.5, 0.5, 0.5)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1wkpu"]
albedo_texture = ExtResource("3_a6n34")
metallic = 0.75
uv1_scale = Vector3(4, 4, 4)
uv1_offset = Vector3(0.185, 0.2, -0.15)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cqepf"]
albedo_texture = ExtResource("2_34djc")
metallic = 0.75
roughness = 0.75
uv1_triplanar = true
texture_filter = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tqj1o"]
radius = 0.092337
height = 0.532169

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dem0p"]
radius = 0.110803
height = 0.562101

[node name="knife" type="Node3D" groups=["prehensible"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_mkcan")

[node name="Knife" type="MeshInstance3D" parent="."]
layers = 8
mesh = ExtResource("1_4ip2a")
surface_material_override/0 = SubResource("StandardMaterial3D_kblde")
surface_material_override/1 = SubResource("StandardMaterial3D_jdtmk")
surface_material_override/2 = SubResource("StandardMaterial3D_1wkpu")
surface_material_override/3 = SubResource("StandardMaterial3D_cqepf")

[node name="interaction_area" type="Area3D" parent="." groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" groups=["prehensible"]]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.0899709, 0.0296321, 0)
shape = SubResource("CapsuleShape3D_tqj1o")

[node name="Couteau de chasse rouillé" type="StaticBody3D" parent="." groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Couteau de chasse rouillé"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.0765804, 0.0463605, 0)
shape = SubResource("CapsuleShape3D_dem0p")

[node name="audio_pick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uu6mv")
pitch_scale = 1.5

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
